--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lite": "lite-server",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
- },
+  },
   "author": "David Cole",
   "license": "ISC",
   "devDependencies": {
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "set-default-browser": "^1.1.2"
   }
 }
